{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 421,
  "lineage": "571d8e5c-5443-cb2e-b04d-316cec3a5d1f",
  "resources": [
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_eip",
      "name": "book_nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb43c62a3494750c",
            "arn": "arn:aws:ec2:us-east-1:910148268074:elastic-ip/eipalloc-0eb43c62a3494750c",
            "association_id": "eipassoc-09c706bf047eeabb4",
            "domain": "vpc",
            "id": "eipalloc-0eb43c62a3494750c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04cd32f08f8590d6c",
            "private_dns": "ip-10-0-0-215.ec2.internal",
            "private_ip": "10.0.0.215",
            "public_dns": "ec2-18-210-69-83.compute-1.amazonaws.com",
            "public_ip": "18.210.69.83",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "book_public_bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a3add10195338ad",
            "arn": "arn:aws:ec2:us-east-1:910148268074:instance/i-0b5200c5fc0fd9b98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5200c5fc0fd9b98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09e49e80450fabd84"
              }
            ],
            "primary_network_interface_id": "eni-09e49e80450fabd84",
            "private_dns": "ip-10-0-0-114.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.114",
            "public_dns": "ec2-34-201-67-178.compute-1.amazonaws.com",
            "public_ip": "34.201.67.178",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e4d4da9604f6f97e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-096d3df8f35b5f3e6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e96926897d790cb",
            "tags": {
              "Name": "Bastion instance"
            },
            "tags_all": {
              "Name": "Bastion instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096d3df8f35b5f3e6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "i-0b5200c5fc0fd9b98",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_security_group.book_bastion_sg",
            "module.backend.aws_subnet.book_public_subnet_1",
            "module.backend.aws_vpc.book_vpc",
            "module.backend.data.aws_ami.ubuntu_image"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "book_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:internet-gateway/igw-0cdc0060ebb1daed0",
            "id": "igw-0cdc0060ebb1daed0",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "tags": {
              "Name": "Book App IGW"
            },
            "tags_all": {
              "Name": "Book App IGW"
            },
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "book_front_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/book-front-lb/d7326ebb0f7757b9",
            "arn_suffix": "app/book-front-lb/d7326ebb0f7757b9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "book-front-lb-1306814596.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/book-front-lb/d7326ebb0f7757b9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "book-front-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-025e0bb48637e1bfb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0275275ff37925b59"
              },
              {
                "subnet_id": "subnet-04f7f4f5eb54a5c07"
              }
            ],
            "subnets": [
              "subnet-0275275ff37925b59",
              "subnet-04f7f4f5eb54a5c07"
            ],
            "tags": {
              "Name": "Front Load Balancer"
            },
            "tags_all": {
              "Name": "Front Load Balancer"
            },
            "vpc_id": "vpc-0107626a6ae668011",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/book-front-lb/d7326ebb0f7757b9"
          },
          "dependencies": [
            "module.backend.aws_security_group.book_front_lb_sg",
            "module.backend.aws_subnet.book_private_subnet_1",
            "module.backend.aws_subnet.book_private_subnet_2",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "book_front_lb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/book-front-lb/d7326ebb0f7757b9/d2ab1b641a6a6f97",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/tf-20251007162847820600000002/0eaad91cec686340",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/book-front-lb/d7326ebb0f7757b9/d2ab1b641a6a6f97",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/book-front-lb/d7326ebb0f7757b9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "Front Load Balancer HTTP Listener"
            },
            "tags_all": {
              "Name": "Front Load Balancer HTTP Listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:listener/app/book-front-lb/d7326ebb0f7757b9/d2ab1b641a6a6f97"
          },
          "dependencies": [
            "module.backend.aws_lb.book_front_lb",
            "module.backend.aws_lb_target_group.book_back_ec2_target_group",
            "module.backend.aws_security_group.book_front_lb_sg",
            "module.backend.aws_subnet.book_private_subnet_1",
            "module.backend.aws_subnet.book_private_subnet_2",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "book_back_ec2_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/tf-20251007162847820600000002/0eaad91cec686340",
            "arn_suffix": "targetgroup/tf-20251007162847820600000002/0eaad91cec686340",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/tf-20251007162847820600000002/0eaad91cec686340",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:910148268074:loadbalancer/app/book-front-lb/d7326ebb0f7757b9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20251007162847820600000002",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Book Backend EC2 Target Group"
            },
            "tags_all": {
              "Name": "Book Backend EC2 Target Group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:910148268074:targetgroup/tf-20251007162847820600000002/0eaad91cec686340"
          },
          "dependencies": [
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "book_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb43c62a3494750c",
            "association_id": "eipassoc-09c706bf047eeabb4",
            "connectivity_type": "public",
            "id": "nat-0b0174d6dd4681e9d",
            "network_interface_id": "eni-04cd32f08f8590d6c",
            "private_ip": "10.0.0.215",
            "public_ip": "18.210.69.83",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e96926897d790cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_eip.book_nat_gw_eip",
            "module.backend.aws_subnet.book_public_subnet_1",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "book_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:route-table/rtb-059a4730784861638",
            "id": "rtb-059a4730784861638",
            "owner_id": "910148268074",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b0174d6dd4681e9d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "local",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "rtb-059a4730784861638",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_eip.book_nat_gw_eip",
            "module.backend.aws_nat_gateway.book_ngw",
            "module.backend.aws_subnet.book_public_subnet_1",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "book_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:route-table/rtb-021016cfe18e5fae2",
            "id": "rtb-021016cfe18e5fae2",
            "owner_id": "910148268074",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdc0060ebb1daed0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "rtb-021016cfe18e5fae2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_internet_gateway.book_igw",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "book_pri_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069fda522d1af66de",
            "region": "us-east-1",
            "route_table_id": "rtb-059a4730784861638",
            "subnet_id": "subnet-0275275ff37925b59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_eip.book_nat_gw_eip",
            "module.backend.aws_nat_gateway.book_ngw",
            "module.backend.aws_route_table.book_private_route_table",
            "module.backend.aws_subnet.book_private_subnet_1",
            "module.backend.aws_subnet.book_public_subnet_1",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "book_pri_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e877c1184c7a37f",
            "region": "us-east-1",
            "route_table_id": "rtb-059a4730784861638",
            "subnet_id": "subnet-04f7f4f5eb54a5c07"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_eip.book_nat_gw_eip",
            "module.backend.aws_nat_gateway.book_ngw",
            "module.backend.aws_route_table.book_private_route_table",
            "module.backend.aws_subnet.book_private_subnet_2",
            "module.backend.aws_subnet.book_public_subnet_1",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "book_pub_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035b7bd1ea3c46dd3",
            "region": "us-east-1",
            "route_table_id": "rtb-021016cfe18e5fae2",
            "subnet_id": "subnet-06e96926897d790cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.backend.aws_internet_gateway.book_igw",
            "module.backend.aws_route_table.book_public_route_table",
            "module.backend.aws_subnet.book_public_subnet_1",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:security-group/sg-006e9016fdeeb0fa1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006e9016fdeeb0fa1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025e0bb48637e1bfb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251007162853208500000005",
            "name_prefix": "terraform-",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "sg-006e9016fdeeb0fa1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_security_group.book_front_lb_sg",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "book_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:security-group/sg-096d3df8f35b5f3e6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-096d3df8f35b5f3e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251007162847820000000001",
            "name_prefix": "terraform-",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "sg-096d3df8f35b5f3e6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "book_front_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:security-group/sg-025e0bb48637e1bfb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025e0bb48637e1bfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251007162847822800000003",
            "name_prefix": "terraform-",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "sg-025e0bb48637e1bfb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "book_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:subnet/subnet-0275275ff37925b59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0275275ff37925b59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910148268074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Book App Private Subnet 1"
            },
            "tags_all": {
              "Name": "Book App Private Subnet 1"
            },
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "subnet-0275275ff37925b59",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "book_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:subnet/subnet-04f7f4f5eb54a5c07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f7f4f5eb54a5c07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910148268074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Book App Private Subnet 2"
            },
            "tags_all": {
              "Name": "Book App Private Subnet 2"
            },
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "subnet-04f7f4f5eb54a5c07",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "book_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:subnet/subnet-06e96926897d790cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e96926897d790cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910148268074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Book App Public Subnet"
            },
            "tags_all": {
              "Name": "Book App Public Subnet"
            },
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "subnet-06e96926897d790cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "book_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:vpc/vpc-0107626a6ae668011",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0844df5e031b9e195",
            "default_route_table_id": "rtb-0b1803b90c6b9f7d7",
            "default_security_group_id": "sg-0b02baedb43ffde96",
            "dhcp_options_id": "dopt-04ab5c2c56c7ca01b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0107626a6ae668011",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1803b90c6b9f7d7",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "tags": {
              "Name": "Book Review App VPC"
            },
            "tags_all": {
              "Name": "Book Review App VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910148268074:security-group/sg-07a58a06395810564",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07a58a06395810564",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006e9016fdeeb0fa1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20251007162857759000000006",
            "name_prefix": "terraform-",
            "owner_id": "910148268074",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0107626a6ae668011"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "910148268074",
            "id": "sg-07a58a06395810564",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.backend.aws_security_group.back_ec2_sg",
            "module.backend.aws_security_group.book_front_lb_sg",
            "module.backend.aws_vpc.book_vpc"
          ]
        }
      ]
    }
  ]
}